# riscvem

./: CMakeLists.txt  LICENSE  README.md  rv32ui-p-add
.github/workflows/: unittest.yml
app/: .main.cpp.swp  main.cpp
cmake/: CodeCoverage.cmake
include/: .memory.hpp.swp  arithmetics.hpp  conditionals.hpp  cpu.hpp  funct3.hpp  memory.hpp  ops.hpp  registers.hpp  utils.hpp
src/: .memory.cpp.swp  .registers.cpp.swp  arithmetics.cpp  conditionals.cpp  cpu.cpp  memory.cpp  registers.cpp  utils.cpp
tests/: CMakeLists.txt  main.cpp
